apps/plex/plex/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plex
  namespace: plex
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: plexinc/pms-docker
          ports:
            - name: plex
              containerPort: 32400
              hostPort: 32400
          volumeMounts:
            - name: config
              mountPath: /config
            - name: transcode
              mountPath: /transcode
            - name: media
              mountPath: /data
          securityContext:
            runAsUser: 500
            runAsGroup: 500
          resources:
            limits:
              gpu.intel.com/i915: 1
          livenessProbe:
            httpGet:
              path: /identity
              port: plex
            initialDelaySeconds: 60
            periodSeconds: 60
            failureThreshold: 3
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config
        - name: transcode
          emptyDir:
            sizeLimit: 10Gi
        - name: media
          nfs:
            server: 10.0.0.11
            path: /tank/media
            readOnly: true
